fix: phase button turns invisible
reason: scss -> css process turning all opacity % values to 1% but floats work fine

[skip ci]

--- a/client/src/stylesheets/gamedashboard/top/Phase.scss
+++ b/client/src/stylesheets/gamedashboard/top/Phase.scss
@@ -39,7 +39,7 @@
       }
 
       &:disabled {
-        opacity: 50%;
+        opacity: 0.5;
       }
 
       &:disabled:hover {
@@ -68,7 +68,7 @@
     color:$space-white;
     transition: all 0.2s ease-in-out;
     text-align: center;
-    opacity: 0%;
+    opacity: 0;
   }
 
   .time {
@@ -87,7 +87,7 @@
 } 
 
 .title:hover ~ .round-info-modal{
-  opacity: 100%;
+  opacity: 1;
 }
 
 .blink-timer{
